--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ config/database.yml
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# Ignore application configuration
+/config/application.yml
