--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,13 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: 
-  full_name: MyString
-  address: MyString
-  phone: MyString
+  subtotal: 9.99
+  tax: 9.99
+  shipping: 9.99
+  total: 9.99
+  order_status: one
 
 two:
-  user: 
-  full_name: MyString
-  address: MyString
-  phone: MyString
+  subtotal: 9.99
+  tax: 9.99
+  shipping: 9.99
+  total: 9.99
+  order_status: two
